[gd_scene load_steps=5 format=3 uid="uid://ca7ydog57tffk"]

[ext_resource type="Script" path="res://UI/Script/canvas_layer.gd" id="1_lm5i0"]

[sub_resource type="SystemFont" id="SystemFont_1jech"]
subpixel_positioning = 0

[sub_resource type="FontVariation" id="FontVariation_74ofy"]
base_font = SubResource("SystemFont_1jech")
spacing_glyph = 5
spacing_space = 5

[sub_resource type="Theme" id="Theme_vufru"]
default_font = SubResource("FontVariation_74ofy")

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_lm5i0")

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -2.0
offset_right = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_vufru")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 689.0
offset_top = -93.0
offset_right = 689.0
offset_bottom = -93.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="PauseMenu"]

[node name="HBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -163.0
offset_right = 167.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
alignment = 1

[node name="Coninue" type="Button" parent="PauseMenu/HBoxContainer"]
layout_mode = 2
text = "Continuar"

[node name="Restart" type="Button" parent="PauseMenu/HBoxContainer"]
layout_mode = 2
text = "Reiniciar"

[node name="Quit" type="Button" parent="PauseMenu/HBoxContainer"]
layout_mode = 2
text = "Salir
"

[connection signal="pressed" from="PauseMenu/HBoxContainer/Coninue" to="." method="_on_coninue_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
